Saving to database works beautifully.  Also, fixed whitespace issues.

--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -2,6 +2,6 @@
 p, pre {
 	font-family: Merriwether, serif;
 }
-p #story {
-	white-space: pre;
+#story, .excerpt {
+	white-space: pre-line;
 }
